// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ColumnsBtn component should handle onClick event 1`] = `
<div
  className="columns-btn"
  onClick={[Function]}
>
  <div />
  <div />
</div>
`;

exports[`test ColumnsBtn component should render ColumnsBtn component active 1`] = `
<div
  className="columns-btn_active"
  onClick={[Function]}
>
  <div />
  <div />
</div>
`;

exports[`test ColumnsBtn component should render ColumnsBtn component not active 1`] = `
<div
  className="columns-btn"
  onClick={[Function]}
>
  <div />
  <div />
</div>
`;
